Fix text visibility issue with the Expand/Collapse All button in Course View (#204)

--- a/courses/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/courses/lms/static/sass/partials/lms/theme/_extras.scss
@@ -104,6 +104,11 @@ a.register-btn {
     background-color: $ms-primary-button-hover !important;
 }
 
+// Expand All/Collapse All button in course view
+#expand-collapse-outline-all-button:hover {
+    color: #FFFFFF !important;
+}
+
 //------------------
 // Registration Page
 //------------------
